<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4018.2">
  <GVL Name="GVL_IO_CO_EX" Id="{1c19ef5e-b7cb-4502-957c-a6655b0561ea}">
    <Declaration><![CDATA[VAR_GLOBAL
	
(**************************************************************************)
(*Collator & Exit Main COntrol Panel*)

IW_141DI1					AT %IB100:WORD;


I_VacPump_OK				AT %IX100.2	:BOOL;	 (* 	VACUUM PUMP STARTER OK	*)
O_VacPump_On				AT %QX101.1	:BOOL;	 (* 	VACUUM PUMP ON	*)


I_CO_Cv_InvRdy		AT %IX100.0	:BOOL;	 (* 	COLLATOR INFEED CONVEYOR INVERTER READY	*)
I_CO_Stk_InvRdy		AT %IX100.1	:BOOL;	 (* 	COLLATOR STACKING INVERTER READY	*)
I_LC_SC_OK		AT %IX100.2	:BOOL;	 (* 	VERTICAL EXIT LIGHT CURTAIN OK	*)
IX1003		AT %IX100.3	:BOOL;	 (* 	SPARE	*)
IX1004		AT %IX100.4	:BOOL;	 (* 	SPARE	*)
IX1005		AT %IX100.5	:BOOL;	 (* 	SPARE	*)
IX1006		AT %IX100.6	:BOOL;	 (* 	SPARE	*)
IX1007		AT %IX100.7	:BOOL;	 (* 	SPARE	*)
						
I_CO_Bdl_StackRel_PE2		AT %IX101.0	:BOOL;	 (* 	SPARE	*)
I_CO_Stk_UpPos2		AT %IX101.1	:BOOL;	 (* 	SPARE	*)
I_EL_FlapHoldR_Fwd		AT %IX101.2	:BOOL;	 (* 	ELEVATOR FLAP HOLDING CYLINDER RIGHT FWD RS	*)
I_EL_FlapHoldR_Bwd		AT %IX101.3	:BOOL;	 (* 	ELEVATOR FLAP HOLDING CYLINDER RIGHT BWD RS	*)
I_EL_FlapHoldL_Fwd		AT %IX101.4	:BOOL;	 (* 	ELEVATOR FLAP HOLDING CYLINDER LEFT FWD RS	*)
I_EL_FlapHoldL_Bwd		AT %IX101.5	:BOOL;	 (* 	ELEVATOR FLAP HOLDING CYLINDER LEFT BWD RS	*)
IX1016		AT %IX101.6	:BOOL;	 (* 	SPARE	*)
IX1017		AT %IX101.7	:BOOL;	 (* 	SPARE	*)

IW_141DI2				AT %IB102:WORD;						    
I_EX_BotCV_Ctn_PE		AT %IX102.0	:BOOL;	 (* 	ERECTOR CARTON PRESENCE AT  BOTTOM EXIT CV. SENSOR SHOULD BE OFF FOR ELEVATOR TO MOVE.	*)
I_EX_TopCV_Ctn_PE		AT %IX102.1	:BOOL;	 (* 	ERECTOR CARTON PRESENCE AT  TOP EXIT CV. SENSOR SHOULD BE OFF FOR ELEVATOR TO MOVE.	*)
IX1022		AT %IX102.2	:BOOL;	 (* 	SPARE	*)
IX1023		AT %IX102.3	:BOOL;	 (* 	SPARE	*)
IX1024		AT %IX102.4	:BOOL;	 (* 	SPARE	*)
IX1025		AT %IX102.5	:BOOL;	 (* 	SPARE	*)
IX1026		AT %IX102.6	:BOOL;	 (* 	SPARE	*)
IX1027		AT %IX102.7	:BOOL;	 (* 	SPARE	*)

IX1030		AT %IX103.0	:BOOL;	 (* 	SPARE	*)
IX1031		AT %IX103.1	:BOOL;	 (* 	SPARE	*)
IX1032		AT %IX103.2	:BOOL;	 (* 	SPARE	*)
IX1033		AT %IX103.3	:BOOL;	 (* 	SPARE	*)
IX1034		AT %IX103.4	:BOOL;	 (* 	SPARE	*)
IX1035		AT %IX103.5	:BOOL;	 (* 	SPARE	*)
IX1036		AT %IX103.6	:BOOL;	 (* 	SPARE	*)
IX1037		AT %IX103.7	:BOOL;	 (* 	SPARE	*)

QW_141DO1				AT %QB100:WORD;						    						
O_CO_CV_Mtr_Run		AT %QX900.0	:BOOL;	 (* 	COLLATOR INFEED CONVEYOR INVERTER RUN	*)
O_CO_CV_Mtr_Dirc		AT %QX900.1	:BOOL;	 (* 	COLLATOR INFEED CONVEYOR INVERTER DIRECTION	*)
O_CO_CV_Mtr_Spd1		AT %QX900.2	:BOOL;	 (* 	COLLATOR INFEED CONVEYOR SPEED BIT1	*)
O_CO_CV_Mtr_Spd2		AT %QX900.3	:BOOL;	 (* 	COLLATOR INFEED CONVEYOR SPEED BIT2	*)
O_CO_Stk_Mtr_Run		AT %QX900.4	:BOOL;	 (* 	COLLATOR STACKING INVERTER RUN	*)
O_CO_Stk_Mtr_Dirc		AT %QX900.5	:BOOL;	 (* 	COLLATOR STACKING INVERTER DIRECTION	*)
O_CO_Stk_Mtr_Spd1		AT %QX900.6	:BOOL;	 (* 	COLLATOR STACKING SPEED BIT1	*)
O_CO_Stk_Mtr_Spd2		AT %QX900.7	:BOOL;	 (* 	COLLATOR STACKING SPEED BIT2	*)
						
O_WT_Mtr_On		AT %QX101.0	:BOOL;	 (* 	WEIGHT CHECKING CONVEYOR STARTER ON	*)
O_EL_BotCV_Mtr_On		AT %QX901.1	:BOOL;	 (* 	ELEVATOR BOTTOM EXIT CV STARTER ON	*)
O_EL_TopCV_Mtr_On		AT %QX901.2	:BOOL;	 (* 	ELEVATOR TOP EXIT CV STARTER ON	*)
O_EX_BotCV_Mtr_On		AT %QX901.3	:BOOL;	 (* 	HORIZONTAL BOTTOM EXIT CV 1 STARTER ON	*)
O_EX_TopCV_Mtr_On		AT %QX901.4	:BOOL;	 (* 	HORIZONTAL TOP EXIT CV 2 STARTER ON	*)
QX1015		AT %QX901.5	:BOOL;	 (* 	SAPRE	*)
QX1016		AT %QX901.6	:BOOL;	 (* 	SAPRE	*)
O_EX_HBM_Trigger		AT %QX101.7	:BOOL;	 (* 	HBM LOAD CELL TRIGGER SIGNAL	*)

QW_141DO2				AT %QB102:WORD;						
O_CO_XPush_Dn		AT %QX102.0	:BOOL;	 (* 	COLLATOR X-PUSHER DOWN	*)
O_CO_XPush_Up		AT %QX102.1	:BOOL;	 (* 	COLLATOR X-PUSHER UP	*)
O_EL_Tilt_Vac_On		AT %QX102.2	:BOOL;	 (* 	7Y1 - EXIT TILT UNIT VACUUM VALVE ON	*)
O_EL_LC_Mute1		AT %QX102.3	:BOOL;	 (* 	ELEVATOR - MUTE LIGHT CURTAIN	*)
O_EL_LC_Mute2		AT %QX102.4	:BOOL;	 (* 	ELEVATOR - MUTE LIGHT CURTAIN	*)
QX1025		AT %QX102.5	:BOOL;	 (* 	SPARE	*)

O_CO_StpL_Up		AT %QX102.6	:BOOL;	 (* 	FOR TESTING	*)  
O_CO_StpR_Up		AT %QX102.7	:BOOL;	 (* 	FOR TESTING	*)
						
QX1030		AT %QX103.0	:BOOL;	 (* 	SPARE	*)
QX1031		AT %QX103.1	:BOOL;	 (* 	SPARE	*)
QX1032		AT %QX103.2	:BOOL;	 (* 	SPARE	*)
QX1033		AT %QX103.3	:BOOL;	 (* 	SPARE	*)
QX1034		AT %QX103.4	:BOOL;	 (* 	SPARE	*)
QX1035		AT %QX103.5	:BOOL;	 (* 	SPARE	*)
QX1036		AT %QX103.6	:BOOL;	 (* 	SPARE	*)
QX1037		AT %QX103.7	:BOOL;	 (* 	SPARE	*)

(**************************************************************************)
(*Erector Field IO - 160A1*)
(*Collator Assembly - Infeed Conveyor Module - Fixed Rail*)

IW_160A1				AT %IB110:WORD;
I_CO_FxStp_Up		AT %IX110.0	:BOOL;	 (* 	COLLATOR FIXED RAIL CV STOPPER CYL UP RS	*)
I_CO_FxStp_Dn		AT %IX110.1	:BOOL;	 (* 	COLLATOR FIXED RAIL CV STOPPER CYL DN RS	*)
I_CO_Bdl_Count_PE		AT %IX110.2	:BOOL;	 (* 	COLLATOR BUNDLE INFEED COUNTING SENSOR	*)
I_CO_Bdl_Reach_PE		AT %IX110.3	:BOOL;	 (* 	COLLATOR BUNDLE AT END OF INFEED CV SENSOR	*)
I_CO_Bdl_Stack_PE		AT %IX110.4	:BOOL;	 (* 	COLLATOR BUNDLE AT STACKED UP SENSOR	*)
I_CO_Bdl_StackRel_PE		AT %IX110.5	:BOOL;	 (* 	COLLATOR BUNDLE AT STACK RELEASE POSITION SENSOR	*)
I_CO_FxStkRel_Fwd				AT %IX110.6	:BOOL;	 (*		COLLATOR FIXED RAIL STACK RELEASE CYLINDER FWD RS*)
I_CO_FxStkRel_Bwd				AT %IX110.7	:BOOL;	 (*		COLLATOR FIXED RAIL STACK RELEASE CYLINDER BWD RS*) 

(**************************************************************************)
(*Erector Field IO - 161A1*)
(*Collator Assembly - Infeed Conveyor Module - Moving Rail*)

IW_161A1				AT %IB111:WORD;
I_CO_MvStp_Up		AT %IX111.0	:BOOL;	 (* 	COLLATOR MOVING RAIL CV STOPPER CYL UP RS	*)
I_CO_MvStp_Dn		AT %IX111.1	:BOOL;	 (* 	COLLATOR MOVING RAIL CV STOPPER CYL DN RS	*)
I_CO_Bdl_ZFull_PE		AT %IX111.2	:BOOL;	 (* 	COLLATOR BUNDLE Z-AXIS STACK FULL SENSOR	*)
I_CO_Bdl_ZLimit_PE		AT %IX111.3	:BOOL;	 (* 	COLLATOR BUNDLE Z-AXIS STACK LIMIT (OVERFLOW) SENSOR	*)
IX1114		AT %IX111.4	:BOOL;	 (* 	SPARE	*)
I_CO_Bdl_Count_PE2		AT %IX111.5	:BOOL;	 (* 	SPARE	*)
I_CO_MvStkRel_Fwd				AT %IX111.6	:BOOL;	 (*		COLLATOR MOVING RAIL STACK RELEASE CYLINDER FWD RS*)
I_CO_MvStkRel_Bwd				AT %IX111.7	:BOOL;	 (*		COLLATOR MOVING RAIL STACK RELEASE CYLINDER BWD RS*) 

(**************************************************************************)
(*Erector Field IO - 162A1*)
(*Collator Assembly - Pusher & Stacking Module*)

IW_162A1				AT %IB112:WORD;
I_CO_YPush_Strk_Fwd		AT %IX112.0	:BOOL;	 (* 	COLLATOR Y PUSHER STROKE CYL FWD RS	*)
I_CO_YPush_Strk_Bwd		AT %IX112.1	:BOOL;	 (* 	COLLATOR Y PUSHER STROKE CYL BWD RS	*)
I_CO_XPush_Up	 	AT %IX112.2	:BOOL;	 (* 	COLLATOR X PUSHER CYL UP RS	*)
I_CO_XPush_Dn		AT %IX112.3	:BOOL;	 (* 	COLLATOR X PUSHER CYL DN RS	*)
I_CO_Stk_UpPos		AT %IX112.4	:BOOL;	 (* 	COLLATOR STACKING CAM MODULE AT UP POSITION	*)
I_CO_Stk_DnPos		AT %IX112.5	:BOOL;	 (* 	COLLATOR STACKING CAM MODULE AT DOWN POSITION	*)
IX1126		AT %IX112.6	:BOOL;	 (* 	SPARE	*)
IX1127		AT %IX112.7	:BOOL;	 (* 	SPARE	*)

(**************************************************************************)
(*Erector Field IO - 163A1*)
(*Exit Assembly - REAR FLAP CLOSE LEFT ASSEMBLY*)

IW_163A1				AT %IB113:WORD;


I_EL_TapeL_Up		AT %IX113.4	:BOOL;	 (* 	EXIT TAPE EXCHANGE LEFT CYL UP RS	*)
I_EL_TapeL_Dn		AT %IX113.5	:BOOL;	 (* 	EXIT TAPE EXCHANGE LEFT CYL DN RS	*)
I_EL_TapeL_Refill_PE		AT %IX113.6	:BOOL;	 (* 	EXIT TAPE LEFT REFILL SENSOR (0=NEED REFILL)	*)
IX1137		AT %IX113.7	:BOOL;	 (* 	SPARE	*)


(**************************************************************************)
(*Erector Field IO - 164A1*)
(*Exit Assembly - REAR FLAP CLOSE RIGHT ASSEMBLY*)

IW_164A1				AT %IB114:WORD;


I_EL_TapeR_Up		AT %IX114.4	:BOOL;	 (* 	EXIT TAPE EXCHANGE RIGHT CYL UP RS	*)
I_EL_TapeR_Dn		AT %IX114.5	:BOOL;	 (* 	EXIT TAPE EXCHANGE RIGHT CYL DN RS	*)
I_EL_TapeR_RefilR_PE		AT %IX114.6	:BOOL;	 (* 	EXIT TAPE RIGHT REFILL SENSOR (0=NEED REFILL)	*)
IX1147		AT %IX114.7	:BOOL;	 (* 	SPARE	*)

(**************************************************************************)
(*Erector Field IO - 165A1*)
(*Exit Assembly - WEIGHT CHECK & TILT UNIT*)

IW_165A1				AT %IB115:WORD;
I_EL_Tilt_Fwd		AT %IX115.0	:BOOL;	 (* 	VERTICAL EXIT TILT CYL FWD RS	*)
I_EL_Tilt_Bwd		AT %IX115.1	:BOOL;	 (* 	VERTICAL EXIT TILT CYL BWD RS	*)
I_EX_Cv_Ctn_PE	 	AT %IX115.2	:BOOL;	 (* 	EXIT WEIGHT CHECKER PRODUCT PRESENCE SENSOR	*)
I_EL_TiltLift_Fwd		AT %IX115.3	:BOOL;	 (* 	VERTICAL EXIT TILT LIFT CYL FWD RS	*)
I_EL_TiltLift_Bwd		AT %IX115.4	:BOOL;	 (* 	VERTICAL EXIT TILT LIFT CYL BWD RS	*)
I_EL_Tilt_VacSw		AT %IX115.5	:BOOL;	 (* 	VERTICAL EXIT TILT VACUUM SWITCH	*)
IX1156		AT %IX115.6	:BOOL;	 (* 	SPARE	*)
IX1157		AT %IX115.7	:BOOL;	 (* 	SPARE	*)

(**************************************************************************)
(*Erector Field IO - 166A1*)
(*Exit Assembly - ELEVATOR MODULE*)

IW_166A1				AT %IB116:WORD;
I_EL_PushRot_Up		AT %IX116.0	:BOOL;	 (* 	ELEVATOR PUSHER ROTATE CYL UP RS	*)
I_EL_PushRot_Dn		AT %IX116.1	:BOOL;	 (* 	ELEVATOR PUSHER ROTATE CYL DN RS	*)
I_EL_Ctn_PE	 	AT %IX116.2	:BOOL;	 (* 	ELEVATOR PRODUCT PRESENCE ON CV SENSOR	*)
I_EL_Center_VacSw		AT %IX116.3	:BOOL;	 (* 	ELEVATOR CARTON CENTERING VACUUM SWITCH	*)
IX1164		AT %IX116.4	:BOOL;	 (* 	SPARE	*)
IX1165		AT %IX116.5	:BOOL;	 (* 	SPARE	*)
IX1166		AT %IX116.6	:BOOL;	 (* 	SPARE	*)
IX1167		AT %IX116.7	:BOOL;	 (* 	SPARE	*)


(**************************************************************************)
(*Erector Field IO - 167A1*)
(*Exit Assembly - ELEVATOR MODULE*)

QW_167A1				AT %QB110:WORD;
O_EL_SafeLock_Rel		AT %QX110.0	:BOOL;	 (* 	9Y1 - ELEVATOR SAFETY LOCK RELEASE SV	*)
O_EL_Center_Vac_On		AT %QX110.1	:BOOL;	 (* 	10Y1 - ELEVATOR CARTON CENTERING VACUUM ON	*)
O_EL_PushRot_Up		AT %QX110.2	:BOOL;	 (* 	8Y1 - ELEVATOR PUSHER ROTATE CYL UP SV	*)
O_EL_PushRot_Dn		AT %QX110.3	:BOOL;	 (* 	8Y1 - ELEVATOR PUSHER ROTATE CYL DN SV	*)
QX1104		AT %QX110.4	:BOOL;	 (* 	SPARE	*)
QX1105		AT %QX110.5	:BOOL;	 (* 	SPARE	*)
QX1106		AT %QX110.6	:BOOL;	 (* 	SPARE	*)
QX1107		AT %QX110.7	:BOOL;	 (* 	SPARE	*)

(**************************************************************************)
(*Erector Field IO - 168A1*)
(*Collator Assembly - Pusher Bridge & Rear Flap Guide*)

IW_168A1				AT %IB117:WORD;
I_CO_Brdg_Fwd		AT %IX117.0	:BOOL;	 (* 	COLLATOR PUSHER BRIDGE CYL FWD RS	*)
I_CO_Brdg_Bwd		AT %IX117.1	:BOOL;	 (* 	COLLATOR PUSHER BRIDGE CYL BWD RS	*)
I_CO_RFlapGuide_Fwd		AT %IX117.2	:BOOL;	 (* 	COLLATOR PUSHER REAR GUIDE FLAP CYL FWD RS	*)
I_CO_RFlapGuide_Bwd		AT %IX117.3	:BOOL;	 (* 	COLLATOR PUSHER REAR GUIDE FLAP CYL BWD RS	*)
I_CO_Stk_AtBuf1_PE		AT %IX117.4	:BOOL;	 (* 	STACK PRESENCE AT PUSHER BUFFER AREA 1 SENSOR	*)
I_CO_Stk_AtBuf2_PE		AT %IX117.5	:BOOL;	 (* 	STACK PRESENCE AT PUSHER BUFFER AREA 2 SENSOR	*)
IX1176		AT %IX117.6	:BOOL;	 (* 	SPARE	*)
IX1177		AT %IX117.7	:BOOL;	 (* 	SPARE	*)

(**************************************************************************)
(*Erector Field IO - 169A1*)
(*Collator Assembly - Pusher Bridge & Rear Flap Guide*)

IW_169A1				AT %IB118:WORD;
I_CO_FFlapGuide_Fwd		AT %IX118.0	:BOOL;	 (* 	COLLATOR PUSHER FRONT GUIDE FLAP CYL FWD RS	*)
I_CO_FFlapGuide_Bwd		AT %IX118.1	:BOOL;	 (* 	COLLATOR PUSHER FRONT GUIDE FLAP CYL BWD RS	*)
I_CO_FFlapBrdg_Fwd		AT %IX118.2	:BOOL;	 (* 	COLLATOR PUSHER FRONT GUIDE FLAP BRIDGE CYL FWD RS	*)
I_CO_FFlapBrdg_Bwd		AT %IX118.3	:BOOL;	 (* 	COLLATOR PUSHER FRONT GUIDE FLAP BRIDGE CYL BWD RS	*)

I_CO_Bdl_XFull_PE		AT %IX118.6	:BOOL;	 (* 	COLLATOR BUNDLE X-AXIS STACK FULL SENSOR	*)
I_CO_Bdl_XLimit_PE		AT %IX118.7	:BOOL;	 (* 	COLLATOR BUNDLE X-AXIS STACK LIMIT (OVERFLOW) SENSOR	*)

I_CO_YPush_Gap_PE :BOOL;	(*spare for gap sensor*)



QW119				AT %IB119:WORD;
QX1190				AT %IX119.0	:BOOL;	 






END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>